Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Đối tượng truy nã đặc biệt trốn ở TP.HCM gần 21 năm sa lưới",
+    "content": "Đối tượng truy nã đặc biệt Đoàn Đức Hải đã bị bắt sau gần 21 năm lẩn trốn ở TP.HCM. Hải, sinh năm 1983, đã bị truy nã từ tháng 4 năm 2004 do liên quan đến việc mua bán heroin. Sau nhiều năm truy tìm, lực lượng công an đã bắt giữ Hải tại quận Gò Vấp vào sáng ngày 12 tháng 3 năm 2025, chấm dứt hành trình trốn chạy của hắn.",
+    "link": "https://tuoitre.vn/doi-tuong-truy-na-dac-biet-tron-o-tp-hcm-gan-21-nam-sa-luoi-20250314213224084.htm",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Đoàn Đức Hải đã bị bắt sau bao lâu lẩn trốn?",
+    "answers": [
+      {
+        "text": "Gần 21 năm",
+        "correct": true
+      },
+      {
+        "text": "Hơn 10 năm",
+        "correct": false
+      },
+      {
+        "text": "15 năm",
+        "correct": false
+      },
+      {
+        "text": "Chưa đầy 5 năm",
+        "correct": false
+      },
+      {
+        "text": "20 năm",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tập đoàn Mỹ muốn xây dựng điện gió ngoài khơi Việt Nam",
     "content": "Tập đoàn Pacifico Energy của Mỹ đang thúc đẩy việc khảo sát và xây dựng các dự án điện gió ngoài khơi tại Việt Nam. Tổng Bí thư Tô Lâm đã tiếp ông Nate Franklin, nhà sáng lập Tập đoàn PE, và đánh giá cao những đóng góp của tập đoàn này cho sự phát triển năng lượng tái tạo của Việt Nam. Ông cũng nhấn mạnh cam kết của Việt Nam trong việc đạt mức phát thải ròng bằng 0 vào năm 2050 và kêu gọi Tập đoàn PE tiếp tục hợp tác để nâng cao năng lực phát triển năng lượng tái tạo tại Việt Nam.",
     "link": "https://tuoitre.vn/tap-doan-my-muon-xay-dung-dien-gio-ngoai-khoi-viet-nam-20250314205655507.htm",
@@ -507,6 +538,37 @@
     ]
   },
   {
+    "title": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
+    "content": "Trong giai đoạn ủ bệnh của thủy đậu, từ 10-21 ngày sau khi nhiễm virus, người bệnh không có triệu chứng rõ ràng nào để nhận biết. Thời gian lây nhiễm bắt đầu từ 1-2 ngày trước khi phát ban xuất hiện. Để phòng bệnh, tiêm vaccine là biện pháp hiệu quả nhất, và có ba loại vaccine thủy đậu hiện có tại Việt Nam. Người bệnh cần chăm sóc đúng cách và theo dõi các dấu hiệu để tránh biến chứng.",
+    "link": "https://vnexpress.net/co-the-nhan-biet-thuy-dau-trong-giai-doan-u-benh-khong-4861443.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
+    "answers": [
+      {
+        "text": "Không, giai đoạn ủ bệnh không có triệu chứng rõ ràng.",
+        "correct": true
+      },
+      {
+        "text": "Có, có thể nhận biết qua triệu chứng sốt nhẹ.",
+        "correct": false
+      },
+      {
+        "text": "Có, có thể thấy mụn nước xuất hiện.",
+        "correct": false
+      },
+      {
+        "text": "Có, có thể nhận biết qua đau đầu và mệt mỏi.",
+        "correct": false
+      },
+      {
+        "text": "Có, có thể thấy triệu chứng chảy nước mũi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bí quyết giúp con giỏi tiếng Anh",
     "content": "Bài viết nhấn mạnh tầm quan trọng của việc học tiếng Anh trong thời đại ngày nay, khi mà việc thành thạo ngôn ngữ này đã trở thành điều thiết yếu cho trẻ em Việt Nam. Phụ huynh cần tạo ra môi trường học tập 100% tiếng Anh và khuyến khích trẻ giao tiếp hàng ngày để phát triển phản xạ ngôn ngữ tự nhiên. Đồng thời, phương pháp học tập chủ động như Discovery Learning cũng được khuyến khích để giúp trẻ phát triển kỹ năng sống và khả năng giao tiếp tự tin trong tương lai.",
     "link": "https://dantri.com.vn/giao-duc/bi-quyet-giup-con-gioi-tieng-anh-20250314162050005.htm",
@@ -556,37 +618,6 @@
       },
       {
         "text": "Giảm tỉ lệ CASA xuống dưới 30%.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
-    "content": "Trong giai đoạn ủ bệnh của thủy đậu, từ 10-21 ngày sau khi nhiễm virus, người bệnh không có triệu chứng rõ ràng nào để nhận biết. Thời gian lây nhiễm bắt đầu từ 1-2 ngày trước khi phát ban xuất hiện. Để phòng bệnh, tiêm vaccine là biện pháp hiệu quả nhất, và có ba loại vaccine thủy đậu hiện có tại Việt Nam. Người bệnh cần chăm sóc đúng cách và theo dõi các dấu hiệu để tránh biến chứng.",
-    "link": "https://vnexpress.net/co-the-nhan-biet-thuy-dau-trong-giai-doan-u-benh-khong-4861443.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
-    "answers": [
-      {
-        "text": "Không, giai đoạn ủ bệnh không có triệu chứng rõ ràng.",
-        "correct": true
-      },
-      {
-        "text": "Có, có thể nhận biết qua triệu chứng sốt nhẹ.",
-        "correct": false
-      },
-      {
-        "text": "Có, có thể thấy mụn nước xuất hiện.",
-        "correct": false
-      },
-      {
-        "text": "Có, có thể nhận biết qua đau đầu và mệt mỏi.",
-        "correct": false
-      },
-      {
-        "text": "Có, có thể thấy triệu chứng chảy nước mũi.",
         "correct": false
       }
     ]
@@ -1941,33 +1972,6 @@
     ]
   },
   {
-    "title": "Khi nào trẻ cần phẫu thuật nạo VA?",
-    "content": "Trẻ cần phẫu thuật nạo VA khi bị viêm VA tái phát nhiều lần, cụ thể là từ 6 lần mỗi năm trở lên hoặc khi VA quá phát gây tắc đường thở. Phẫu thuật nạo VA giúp loại bỏ mô viêm, giảm nguy cơ viêm tai giữa, viêm họng, và các bệnh lý khác. Mặc dù phẫu thuật là phương pháp cuối cùng, nhưng rất ít trường hợp tái phát VA sau khi phẫu thuật.",
-    "link": "https://vnexpress.net/khi-nao-tre-can-phau-thuat-nao-va-4861269.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Khi nào trẻ cần phẫu thuật nạo VA?",
-    "answers": [
-      {
-        "text": "Khi trẻ viêm VA tái phát trên 6 lần mỗi năm.",
-        "correct": true
-      },
-      {
-        "text": "Khi trẻ bị cảm lạnh thông thường.",
-        "correct": false
-      },
-      {
-        "text": "Khi trẻ có triệu chứng đau họng nhẹ.",
-        "correct": false
-      },
-      {
-        "text": "Khi trẻ bị viêm phổi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Khó thở sau mắc cúm A có phải phổi chưa hồi phục?",
     "content": "Bài viết đề cập đến tình trạng khó thở và mệt mỏi sau khi mắc cúm A. Có thể đây là dấu hiệu cho thấy phổi chưa hồi phục hoàn toàn do virus cúm A có thể gây tổn thương tế bào phổi. Người bệnh nên kiểm tra chức năng phổi để đánh giá mức độ tổn thương và có các biện pháp phục hồi, bao gồm lối sống lành mạnh và tiêm vaccine cúm hàng năm để ngăn ngừa tái nhiễm.",
     "link": "https://vnexpress.net/kho-tho-sau-mac-cum-a-co-phai-phoi-chua-hoi-phuc-4861323.html",
@@ -1990,6 +1994,33 @@
       },
       {
         "text": "Có, chỉ cần nghỉ ngơi là đủ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Khi nào trẻ cần phẫu thuật nạo VA?",
+    "content": "Trẻ cần phẫu thuật nạo VA khi bị viêm VA tái phát nhiều lần, cụ thể là từ 6 lần mỗi năm trở lên hoặc khi VA quá phát gây tắc đường thở. Phẫu thuật nạo VA giúp loại bỏ mô viêm, giảm nguy cơ viêm tai giữa, viêm họng, và các bệnh lý khác. Mặc dù phẫu thuật là phương pháp cuối cùng, nhưng rất ít trường hợp tái phát VA sau khi phẫu thuật.",
+    "link": "https://vnexpress.net/khi-nao-tre-can-phau-thuat-nao-va-4861269.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Khi nào trẻ cần phẫu thuật nạo VA?",
+    "answers": [
+      {
+        "text": "Khi trẻ viêm VA tái phát trên 6 lần mỗi năm.",
+        "correct": true
+      },
+      {
+        "text": "Khi trẻ bị cảm lạnh thông thường.",
+        "correct": false
+      },
+      {
+        "text": "Khi trẻ có triệu chứng đau họng nhẹ.",
+        "correct": false
+      },
+      {
+        "text": "Khi trẻ bị viêm phổi.",
         "correct": false
       }
     ]
@@ -3602,32 +3633,28 @@
     ]
   },
   {
-    "title": "'Quả bom' dân số già của Malaysia",
-    "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
-    "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 9,
-    "question": "Malaysia đang phải đối mặt với vấn đề gì liên quan đến dân số?",
+    "title": "Những điều \"ngược đời\" trong việc nuôi dạy con từ góc nhìn chuyên gia",
+    "content": "Bài viết đề cập đến những điều \"ngược đời\" trong việc nuôi dạy con mà phụ huynh cần chấp nhận để có một hành trình nuôi dưỡng suôn sẻ hơn. Chuyên gia tâm lý Naomi Fisher khuyên rằng cha mẹ nên chấp nhận thực tế khác với kỳ vọng, nhượng bộ trong những chuyện nhỏ, và tìm hiểu về thế giới trực tuyến của con. Hơn nữa, sự hài hước cũng đóng vai trò quan trọng trong việc tạo ra không khí gia đình vui vẻ và hòa thuận, giúp trẻ dễ dàng tiếp nhận ý kiến của cha mẹ hơn.",
+    "link": "https://dantri.com.vn/giao-duc/nhung-dieu-nguoc-doi-trong-viec-nuoi-day-con-tu-goc-nhin-chuyen-gia-20250313151734224.htm",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những điều gì phụ huynh cần chấp nhận trong việc nuôi dạy con?",
     "answers": [
       {
-        "text": "Già hóa dân số",
+        "text": "Chấp nhận thực tế khác với kỳ vọng",
         "correct": true
       },
       {
-        "text": "Tỷ lệ sinh tăng",
+        "text": "Không cho trẻ sử dụng thiết bị điện tử",
         "correct": false
       },
       {
-        "text": "Thiếu lao động trẻ",
+        "text": "Luôn cứng rắn và không nhượng bộ con",
         "correct": false
       },
       {
-        "text": "Gia tăng tỷ lệ thất nghiệp",
-        "correct": false
-      },
-      {
-        "text": "Chăm sóc trẻ em",
+        "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
         "correct": false
       }
     ]
@@ -3687,28 +3714,32 @@
     ]
   },
   {
-    "title": "Những điều \"ngược đời\" trong việc nuôi dạy con từ góc nhìn chuyên gia",
-    "content": "Bài viết đề cập đến những điều \"ngược đời\" trong việc nuôi dạy con mà phụ huynh cần chấp nhận để có một hành trình nuôi dưỡng suôn sẻ hơn. Chuyên gia tâm lý Naomi Fisher khuyên rằng cha mẹ nên chấp nhận thực tế khác với kỳ vọng, nhượng bộ trong những chuyện nhỏ, và tìm hiểu về thế giới trực tuyến của con. Hơn nữa, sự hài hước cũng đóng vai trò quan trọng trong việc tạo ra không khí gia đình vui vẻ và hòa thuận, giúp trẻ dễ dàng tiếp nhận ý kiến của cha mẹ hơn.",
-    "link": "https://dantri.com.vn/giao-duc/nhung-dieu-nguoc-doi-trong-viec-nuoi-day-con-tu-goc-nhin-chuyen-gia-20250313151734224.htm",
-    "cat": "gia-dinh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những điều gì phụ huynh cần chấp nhận trong việc nuôi dạy con?",
+    "title": "'Quả bom' dân số già của Malaysia",
+    "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
+    "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Malaysia đang phải đối mặt với vấn đề gì liên quan đến dân số?",
     "answers": [
       {
-        "text": "Chấp nhận thực tế khác với kỳ vọng",
+        "text": "Già hóa dân số",
         "correct": true
       },
       {
-        "text": "Không cho trẻ sử dụng thiết bị điện tử",
+        "text": "Tỷ lệ sinh tăng",
         "correct": false
       },
       {
-        "text": "Luôn cứng rắn và không nhượng bộ con",
+        "text": "Thiếu lao động trẻ",
         "correct": false
       },
       {
-        "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
+        "text": "Gia tăng tỷ lệ thất nghiệp",
+        "correct": false
+      },
+      {
+        "text": "Chăm sóc trẻ em",
         "correct": false
       }
     ]
@@ -4026,33 +4057,6 @@
       },
       {
         "text": "Tiêu dùng nội địa",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Xét xử nhóm thanh thiếu niên hiếp dâm bé gái dưới 14 tuổi",
-    "content": "Ngày 13-3, Tòa án nhân dân tỉnh Gia Lai đã xét xử nhóm thanh thiếu niên liên quan đến vụ hiếp dâm một bé gái dưới 14 tuổi tại huyện Ia Pa. Vụ việc xảy ra vào đêm 17-3-2024, khi nhóm thanh niên đã uống rượu và thực hiện hành vi hiếp dâm đối với cháu K.H, trong khi một người khác ghi lại video và không báo cáo sự việc với cơ quan chức năng. Siu Hưng bị tuyên phạt 18 năm tù, K.Q. nhận 7 năm tù, trong khi các đối tượng khác bị xử lý về tội không tố giác tội phạm.",
-    "link": "https://tuoitre.vn/xet-xu-nhom-thanh-thieu-nien-hiep-dam-be-gai-duoi-14-tuoi-20250313214154402.htm",
-    "cat": "phap-luat",
-    "positivity": 1,
-    "importance": 10,
-    "question": "Vụ hiếp dâm bé gái dưới 14 tuổi ở Gia Lai đã được xử lý như thế nào?",
-    "answers": [
-      {
-        "text": "Nhóm thanh thiếu niên bị tuyên án tù giam.",
-        "correct": true
-      },
-      {
-        "text": "Bé gái được bồi thường thiệt hại.",
-        "correct": false
-      },
-      {
-        "text": "Vụ việc không được điều tra.",
-        "correct": false
-      },
-      {
-        "text": "Các bị cáo được trắng án.",
         "correct": false
       }
     ]
