--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -108,6 +108,33 @@
     ]
   },
   {
+    "title": "TP Phú Quốc được công nhận đô thị loại I",
+    "content": "TP Phú Quốc vừa được công nhận là đô thị loại I, đánh dấu sự phát triển vượt bậc về kinh tế, hạ tầng và xã hội. Buổi lễ công bố diễn ra vào ngày 14/3/2025, với sự tham gia của Phó thủ tướng Trần Hồng Hà, người bày tỏ mong muốn Phú Quốc tiếp tục phát triển thành điểm đến du lịch nổi bật. Từ một địa phương có ngân sách thấp, Phú Quốc đã thu hút hơn 300 dự án đầu tư, với tổng vốn đăng ký lên tới 412.000 tỷ đồng và đón gần 6 triệu lượt khách du lịch trong năm vừa qua.",
+    "link": "https://vnexpress.net/tp-phu-quoc-duoc-cong-nhan-do-thi-loai-i-4861523.html",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Tại sao TP Phú Quốc lại được công nhận là đô thị loại I?",
+    "answers": [
+      {
+        "text": "Vì đáp ứng nhiều tiêu chí về quy mô dân số và phát triển kinh tế",
+        "correct": true
+      },
+      {
+        "text": "Vì có diện tích lớn",
+        "correct": false
+      },
+      {
+        "text": "Vì có nhiều khách du lịch",
+        "correct": false
+      },
+      {
+        "text": "Vì có nhiều nhà hàng nổi tiếng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đối tượng truy nã đặc biệt trốn ở TP.HCM gần 21 năm sa lưới",
     "content": "Đối tượng truy nã đặc biệt Đoàn Đức Hải đã bị bắt sau gần 21 năm lẩn trốn ở TP.HCM. Hải, sinh năm 1983, đã bị truy nã từ tháng 4 năm 2004 do liên quan đến việc mua bán heroin. Sau nhiều năm truy tìm, lực lượng công an đã bắt giữ Hải tại quận Gò Vấp vào sáng ngày 12 tháng 3 năm 2025, chấm dứt hành trình trốn chạy của hắn.",
     "link": "https://tuoitre.vn/doi-tuong-truy-na-dac-biet-tron-o-tp-hcm-gan-21-nam-sa-luoi-20250314213224084.htm",
@@ -525,33 +552,6 @@
     ]
   },
   {
-    "title": "Techcombank dẫn dắt cuộc cách mạng tăng trưởng và đổi mới trong ngành ngân hàng",
-    "content": "Techcombank đã khẳng định vị thế dẫn đầu trong ngành ngân hàng với lợi nhuận trước thuế đạt 27.500 tỷ đồng, tăng 20,3% so với năm trước. Ngân hàng này đã đầu tư mạnh vào công nghệ như trí tuệ nhân tạo và máy học, giúp tối ưu hóa dịch vụ và thu hút gần 2 triệu khách hàng mới. Techcombank tiếp tục duy trì tỉ lệ CASA cao nhất trong ngành, củng cố vị thế cạnh tranh và mở rộng nguồn thu nhập ngoài lãi.",
-    "link": "https://tuoitre.vn/techcombank-dan-dat-cuoc-cach-mang-tang-truong-va-doi-moi-trong-nganh-ngan-hang-20250314192433628.htm",
-    "cat": "kinh-doanh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Techcombank đã đạt được những thành tựu gì trong năm 2024?",
-    "answers": [
-      {
-        "text": "Lợi nhuận trước thuế tăng 20,3% và thu hút gần 2 triệu khách hàng mới.",
-        "correct": true
-      },
-      {
-        "text": "Cắt giảm chi phí hoạt động đáng kể.",
-        "correct": false
-      },
-      {
-        "text": "Không có sự thay đổi nào trong chiến lược.",
-        "correct": false
-      },
-      {
-        "text": "Giảm tỉ lệ CASA xuống dưới 30%.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
     "content": "Trong giai đoạn ủ bệnh của thủy đậu, từ 10-21 ngày sau khi nhiễm virus, người bệnh không có triệu chứng rõ ràng nào để nhận biết. Thời gian lây nhiễm bắt đầu từ 1-2 ngày trước khi phát ban xuất hiện. Để phòng bệnh, tiêm vaccine là biện pháp hiệu quả nhất, và có ba loại vaccine thủy đậu hiện có tại Việt Nam. Người bệnh cần chăm sóc đúng cách và theo dõi các dấu hiệu để tránh biến chứng.",
     "link": "https://vnexpress.net/co-the-nhan-biet-thuy-dau-trong-giai-doan-u-benh-khong-4861443.html",
@@ -605,6 +605,33 @@
       },
       {
         "text": "Chỉ cho trẻ xem phim tiếng Việt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Techcombank dẫn dắt cuộc cách mạng tăng trưởng và đổi mới trong ngành ngân hàng",
+    "content": "Techcombank đã khẳng định vị thế dẫn đầu trong ngành ngân hàng với lợi nhuận trước thuế đạt 27.500 tỷ đồng, tăng 20,3% so với năm trước. Ngân hàng này đã đầu tư mạnh vào công nghệ như trí tuệ nhân tạo và máy học, giúp tối ưu hóa dịch vụ và thu hút gần 2 triệu khách hàng mới. Techcombank tiếp tục duy trì tỉ lệ CASA cao nhất trong ngành, củng cố vị thế cạnh tranh và mở rộng nguồn thu nhập ngoài lãi.",
+    "link": "https://tuoitre.vn/techcombank-dan-dat-cuoc-cach-mang-tang-truong-va-doi-moi-trong-nganh-ngan-hang-20250314192433628.htm",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Techcombank đã đạt được những thành tựu gì trong năm 2024?",
+    "answers": [
+      {
+        "text": "Lợi nhuận trước thuế tăng 20,3% và thu hút gần 2 triệu khách hàng mới.",
+        "correct": true
+      },
+      {
+        "text": "Cắt giảm chi phí hoạt động đáng kể.",
+        "correct": false
+      },
+      {
+        "text": "Không có sự thay đổi nào trong chiến lược.",
+        "correct": false
+      },
+      {
+        "text": "Giảm tỉ lệ CASA xuống dưới 30%.",
         "correct": false
       }
     ]
@@ -1356,33 +1383,6 @@
     ]
   },
   {
-    "title": "Béo phì nhưng suy dinh dưỡng do ăn kiêng sai cách",
-    "content": "Chị Liên, 41 tuổi, nặng 67 kg, đã giảm béo bằng cách ăn kiêng khắc nghiệt nhưng vẫn bị béo phì và suy dinh dưỡng. Sau khi giảm cân bằng cách cắt giảm tinh bột và đồ ngọt, chị gặp phải tình trạng thiếu vitamin D và suy dinh dưỡng do không nạp đủ chất dinh dưỡng cần thiết. Bác sĩ khuyến cáo rằng chế độ ăn kiêng như vậy không hiệu quả và cần có kế hoạch ăn uống hợp lý hơn để giảm cân an toàn.",
-    "link": "https://vnexpress.net/beo-phi-nhung-suy-dinh-duong-do-an-kieng-sai-cach-4861383.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao chị Liên lại bị béo phì nhưng vẫn suy dinh dưỡng?",
-    "answers": [
-      {
-        "text": "Vì chế độ ăn kiêng quá khắc nghiệt dẫn đến thiếu dinh dưỡng.",
-        "correct": true
-      },
-      {
-        "text": "Chị Liên không tập thể dục.",
-        "correct": false
-      },
-      {
-        "text": "Chế độ ăn của chị Liên hoàn toàn bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Chị Liên ăn quá nhiều thực phẩm chức năng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "6 vitamin, khoáng chất cần thiết cho não",
     "content": "Bài viết nêu rõ 6 loại vitamin và khoáng chất thiết yếu cho não, bao gồm vitamin D, B, magie, omega-3 và kẽm, giúp cải thiện chức năng não, tăng cường trí nhớ và hỗ trợ sức khỏe tâm thần. Vitamin D hỗ trợ tâm trạng và bảo vệ não, magie giúp truyền thông điệp đến não, omega-3 có tác dụng chống viêm và hỗ trợ kiểm soát triệu chứng trầm cảm. Vitamin B và kẽm cũng đóng vai trò quan trọng trong việc duy trì sự cân bằng hormone và chức năng não.",
     "link": "https://vnexpress.net/6-vitamin-khoang-chat-can-thiet-cho-nao-4861219.html",
@@ -1405,6 +1405,33 @@
       },
       {
         "text": "Vitamin B, A, kẽm, magie",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Béo phì nhưng suy dinh dưỡng do ăn kiêng sai cách",
+    "content": "Chị Liên, 41 tuổi, nặng 67 kg, đã giảm béo bằng cách ăn kiêng khắc nghiệt nhưng vẫn bị béo phì và suy dinh dưỡng. Sau khi giảm cân bằng cách cắt giảm tinh bột và đồ ngọt, chị gặp phải tình trạng thiếu vitamin D và suy dinh dưỡng do không nạp đủ chất dinh dưỡng cần thiết. Bác sĩ khuyến cáo rằng chế độ ăn kiêng như vậy không hiệu quả và cần có kế hoạch ăn uống hợp lý hơn để giảm cân an toàn.",
+    "link": "https://vnexpress.net/beo-phi-nhung-suy-dinh-duong-do-an-kieng-sai-cach-4861383.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao chị Liên lại bị béo phì nhưng vẫn suy dinh dưỡng?",
+    "answers": [
+      {
+        "text": "Vì chế độ ăn kiêng quá khắc nghiệt dẫn đến thiếu dinh dưỡng.",
+        "correct": true
+      },
+      {
+        "text": "Chị Liên không tập thể dục.",
+        "correct": false
+      },
+      {
+        "text": "Chế độ ăn của chị Liên hoàn toàn bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Chị Liên ăn quá nhiều thực phẩm chức năng.",
         "correct": false
       }
     ]
@@ -1611,6 +1638,33 @@
     ]
   },
   {
+    "title": "Mắc sốt xuất huyết nổi ban có nên tắm?",
+    "content": "Người bệnh sốt xuất huyết có thể tắm bằng nước ấm, nhưng cần lưu ý không kỳ cọ mạnh và tránh nước lạnh để ngăn ngừa tình trạng xuất huyết dưới da. Việc tắm giúp cơ thể thông thoáng và sạch sẽ, nhưng nên thực hiện nhẹ nhàng trong môi trường kín gió. Bên cạnh đó, người bệnh cần duy trì chế độ dinh dưỡng tốt và theo dõi các triệu chứng để tránh biến chứng nghiêm trọng.",
+    "link": "https://vnexpress.net/mac-sot-xuat-huyet-noi-ban-co-nen-tam-4861344.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Người mắc sốt xuất huyết có nên tắm không?",
+    "answers": [
+      {
+        "text": "Có, nhưng cần tắm nhẹ nhàng bằng nước ấm.",
+        "correct": true
+      },
+      {
+        "text": "Không, hoàn toàn không nên tắm.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên tắm trong trường hợp có sốt nhẹ.",
+        "correct": false
+      },
+      {
+        "text": "Có thể tắm nhưng không được gãi mạnh.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Dấu hiệu khi đi bộ cảnh báo bệnh tiểu đường",
     "content": "Bài viết nêu rõ những dấu hiệu khi đi bộ có thể cảnh báo bệnh tiểu đường, bao gồm cảm giác tê, ngứa ran, chuột rút ở chân, mệt mỏi bất thường và sưng ở bàn chân. Những triệu chứng này có thể do bệnh thần kinh ngoại biên hoặc bệnh động mạch ngoại biên do tiểu đường gây ra. Việc phát hiện sớm những dấu hiệu này rất quan trọng để kiểm soát bệnh tiểu đường hiệu quả.",
     "link": "https://vnexpress.net/dau-hieu-khi-di-bo-canh-bao-benh-tieu-duong-4861192.html",
@@ -1637,33 +1691,6 @@
       },
       {
         "text": "Nôn mửa và tiêu chảy",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mắc sốt xuất huyết nổi ban có nên tắm?",
-    "content": "Người bệnh sốt xuất huyết có thể tắm bằng nước ấm, nhưng cần lưu ý không kỳ cọ mạnh và tránh nước lạnh để ngăn ngừa tình trạng xuất huyết dưới da. Việc tắm giúp cơ thể thông thoáng và sạch sẽ, nhưng nên thực hiện nhẹ nhàng trong môi trường kín gió. Bên cạnh đó, người bệnh cần duy trì chế độ dinh dưỡng tốt và theo dõi các triệu chứng để tránh biến chứng nghiêm trọng.",
-    "link": "https://vnexpress.net/mac-sot-xuat-huyet-noi-ban-co-nen-tam-4861344.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Người mắc sốt xuất huyết có nên tắm không?",
-    "answers": [
-      {
-        "text": "Có, nhưng cần tắm nhẹ nhàng bằng nước ấm.",
-        "correct": true
-      },
-      {
-        "text": "Không, hoàn toàn không nên tắm.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên tắm trong trường hợp có sốt nhẹ.",
-        "correct": false
-      },
-      {
-        "text": "Có thể tắm nhưng không được gãi mạnh.",
         "correct": false
       }
     ]
@@ -2805,37 +2832,6 @@
     ]
   },
   {
-    "title": "Yếu tố thuyết phục khách nữ của Toyota Vios",
-    "content": "Bài viết phân tích yếu tố thuyết phục khách hàng nữ khi chọn mua Toyota Vios, đặc biệt là những gia đình trẻ. Toyota Vios được ưa chuộng nhờ thiết kế hiện đại, tính năng an toàn cao và khả năng tiết kiệm nhiên liệu, phù hợp với nhu cầu của phụ nữ lái xe. Những công nghệ hỗ trợ lái và thiết kế tiện nghi của Vios đã giúp chiếc xe này trở thành lựa chọn hàng đầu trong phân khúc sedan cỡ B tại Việt Nam.",
-    "link": "https://vnexpress.net/yeu-to-thuyet-phuc-khach-nu-cua-toyota-vios-4858857.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao khách hàng nữ lại chọn Toyota Vios?",
-    "answers": [
-      {
-        "text": "Vì xe có thiết kế hiện đại và tính năng an toàn cao.",
-        "correct": true
-      },
-      {
-        "text": "Vì xe có động cơ mạnh mẽ hơn các mẫu khác.",
-        "correct": false
-      },
-      {
-        "text": "Vì xe có giá bán thấp nhất trên thị trường.",
-        "correct": false
-      },
-      {
-        "text": "Vì xe không tốn nhiều xăng khi chạy.",
-        "correct": false
-      },
-      {
-        "text": "Vì xe có nhiều màu sắc lựa chọn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Người bệnh ung thư có nên kiêng thịt nướng?",
     "content": "Người bệnh ung thư nên hạn chế tiêu thụ thịt nướng do các hợp chất độc hại có thể hình thành trong quá trình nướng, gây tăng nguy cơ mắc ung thư hoặc làm nặng thêm triệu chứng bệnh. Mặc dù không cần phải kiêng hoàn toàn, người bệnh nên ăn có chừng mực và ưu tiên các phương pháp chế biến lành mạnh hơn như hấp hoặc luộc. Việc tiêu thụ thịt nướng cần được kết hợp với nhiều rau củ và đủ nước để hỗ trợ tiêu hóa và giảm tác động tiêu cực của các chất độc hại. Chế độ ăn uống phù hợp sẽ giúp tăng cường hệ miễn dịch và hỗ trợ hồi phục sau điều trị.",
     "link": "https://vnexpress.net/nguoi-benh-ung-thu-co-nen-kieng-thit-nuong-4861212.html",
@@ -2885,6 +2881,37 @@
       },
       {
         "text": "Cắt túi mật hoàn toàn không cần thiết.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Yếu tố thuyết phục khách nữ của Toyota Vios",
+    "content": "Bài viết phân tích yếu tố thuyết phục khách hàng nữ khi chọn mua Toyota Vios, đặc biệt là những gia đình trẻ. Toyota Vios được ưa chuộng nhờ thiết kế hiện đại, tính năng an toàn cao và khả năng tiết kiệm nhiên liệu, phù hợp với nhu cầu của phụ nữ lái xe. Những công nghệ hỗ trợ lái và thiết kế tiện nghi của Vios đã giúp chiếc xe này trở thành lựa chọn hàng đầu trong phân khúc sedan cỡ B tại Việt Nam.",
+    "link": "https://vnexpress.net/yeu-to-thuyet-phuc-khach-nu-cua-toyota-vios-4858857.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao khách hàng nữ lại chọn Toyota Vios?",
+    "answers": [
+      {
+        "text": "Vì xe có thiết kế hiện đại và tính năng an toàn cao.",
+        "correct": true
+      },
+      {
+        "text": "Vì xe có động cơ mạnh mẽ hơn các mẫu khác.",
+        "correct": false
+      },
+      {
+        "text": "Vì xe có giá bán thấp nhất trên thị trường.",
+        "correct": false
+      },
+      {
+        "text": "Vì xe không tốn nhiều xăng khi chạy.",
+        "correct": false
+      },
+      {
+        "text": "Vì xe có nhiều màu sắc lựa chọn.",
         "correct": false
       }
     ]
