Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Fernandes suýt rời Man Utd hè 2024",
+    "content": "Bruno Fernandes đã suýt rời Manchester United trong kỳ chuyển nhượng hè 2024 do nhận được đề nghị hấp dẫn từ một CLB khác. Tuy nhiên, nhờ sự thuyết phục của ban lãnh đạo và cựu HLV Erik Ten Hag, anh đã quyết định ở lại. Fernandes hiện đang có phong độ tốt, ghi được nhiều bàn thắng và góp phần quan trọng vào đội bóng. Mặc dù có thông tin về sự quan tâm từ các đội bóng lớn như Real Madrid và PSG, anh đã gia hạn hợp đồng với Man Utd đến năm 2027.",
+    "link": "https://vnexpress.net/fernandes-suyt-roi-man-utd-he-2024-4861423.html",
+    "cat": "the-thao",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao Fernandes quyết định ở lại Manchester United vào hè 2024?",
+    "answers": [
+      {
+        "text": "Do được ban lãnh đạo và HLV thuyết phục",
+        "correct": true
+      },
+      {
+        "text": "Vì anh không nhận được đề nghị nào tốt hơn",
+        "correct": false
+      },
+      {
+        "text": "Vì anh muốn ra đi nhưng không có đội bóng nào quan tâm",
+        "correct": false
+      },
+      {
+        "text": "Do anh không thích thành phố Manchester",
+        "correct": false
+      },
+      {
+        "text": "Vì anh muốn chứng tỏ tài năng tại Man Utd",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Facebook xóa video livestream cũ: Người kinh doanh online tiếc hùi hụi",
     "content": "Facebook đã thông báo về việc xóa tất cả video livestream sau 30 ngày kể từ khi phát sóng. Quy định này đang khiến nhiều người kinh doanh online tại Việt Nam lo lắng vì họ mất đi một kênh lưu trữ nội dung quan trọng. Nhiều người dùng cho rằng việc xóa video sẽ ảnh hưởng đến khả năng tiếp cận khách hàng và giá trị thương mại của các video livestream mà họ đã tạo ra.",
     "link": "https://tuoitre.vn/facebook-xoa-video-livestream-cu-nguoi-kinh-doanh-online-tiec-hui-hui-20250314230352801.htm",
@@ -882,32 +913,28 @@
     ]
   },
   {
-    "title": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
-    "content": "Trong giai đoạn ủ bệnh của thủy đậu, từ 10-21 ngày sau khi nhiễm virus, người bệnh không có triệu chứng rõ ràng nào để nhận biết. Thời gian lây nhiễm bắt đầu từ 1-2 ngày trước khi phát ban xuất hiện. Để phòng bệnh, tiêm vaccine là biện pháp hiệu quả nhất, và có ba loại vaccine thủy đậu hiện có tại Việt Nam. Người bệnh cần chăm sóc đúng cách và theo dõi các dấu hiệu để tránh biến chứng.",
-    "link": "https://vnexpress.net/co-the-nhan-biet-thuy-dau-trong-giai-doan-u-benh-khong-4861443.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
+    "title": "Techcombank dẫn dắt cuộc cách mạng tăng trưởng và đổi mới trong ngành ngân hàng",
+    "content": "Techcombank đã khẳng định vị thế dẫn đầu trong ngành ngân hàng với lợi nhuận trước thuế đạt 27.500 tỷ đồng, tăng 20,3% so với năm trước. Ngân hàng này đã đầu tư mạnh vào công nghệ như trí tuệ nhân tạo và máy học, giúp tối ưu hóa dịch vụ và thu hút gần 2 triệu khách hàng mới. Techcombank tiếp tục duy trì tỉ lệ CASA cao nhất trong ngành, củng cố vị thế cạnh tranh và mở rộng nguồn thu nhập ngoài lãi.",
+    "link": "https://tuoitre.vn/techcombank-dan-dat-cuoc-cach-mang-tang-truong-va-doi-moi-trong-nganh-ngan-hang-20250314192433628.htm",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Techcombank đã đạt được những thành tựu gì trong năm 2024?",
     "answers": [
       {
-        "text": "Không, giai đoạn ủ bệnh không có triệu chứng rõ ràng.",
+        "text": "Lợi nhuận trước thuế tăng 20,3% và thu hút gần 2 triệu khách hàng mới.",
         "correct": true
       },
       {
-        "text": "Có, có thể nhận biết qua triệu chứng sốt nhẹ.",
+        "text": "Cắt giảm chi phí hoạt động đáng kể.",
         "correct": false
       },
       {
-        "text": "Có, có thể thấy mụn nước xuất hiện.",
+        "text": "Không có sự thay đổi nào trong chiến lược.",
         "correct": false
       },
       {
-        "text": "Có, có thể nhận biết qua đau đầu và mệt mỏi.",
-        "correct": false
-      },
-      {
-        "text": "Có, có thể thấy triệu chứng chảy nước mũi.",
+        "text": "Giảm tỉ lệ CASA xuống dưới 30%.",
         "correct": false
       }
     ]
@@ -940,28 +967,32 @@
     ]
   },
   {
-    "title": "Techcombank dẫn dắt cuộc cách mạng tăng trưởng và đổi mới trong ngành ngân hàng",
-    "content": "Techcombank đã khẳng định vị thế dẫn đầu trong ngành ngân hàng với lợi nhuận trước thuế đạt 27.500 tỷ đồng, tăng 20,3% so với năm trước. Ngân hàng này đã đầu tư mạnh vào công nghệ như trí tuệ nhân tạo và máy học, giúp tối ưu hóa dịch vụ và thu hút gần 2 triệu khách hàng mới. Techcombank tiếp tục duy trì tỉ lệ CASA cao nhất trong ngành, củng cố vị thế cạnh tranh và mở rộng nguồn thu nhập ngoài lãi.",
-    "link": "https://tuoitre.vn/techcombank-dan-dat-cuoc-cach-mang-tang-truong-va-doi-moi-trong-nganh-ngan-hang-20250314192433628.htm",
-    "cat": "kinh-doanh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Techcombank đã đạt được những thành tựu gì trong năm 2024?",
+    "title": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
+    "content": "Trong giai đoạn ủ bệnh của thủy đậu, từ 10-21 ngày sau khi nhiễm virus, người bệnh không có triệu chứng rõ ràng nào để nhận biết. Thời gian lây nhiễm bắt đầu từ 1-2 ngày trước khi phát ban xuất hiện. Để phòng bệnh, tiêm vaccine là biện pháp hiệu quả nhất, và có ba loại vaccine thủy đậu hiện có tại Việt Nam. Người bệnh cần chăm sóc đúng cách và theo dõi các dấu hiệu để tránh biến chứng.",
+    "link": "https://vnexpress.net/co-the-nhan-biet-thuy-dau-trong-giai-doan-u-benh-khong-4861443.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
     "answers": [
       {
-        "text": "Lợi nhuận trước thuế tăng 20,3% và thu hút gần 2 triệu khách hàng mới.",
+        "text": "Không, giai đoạn ủ bệnh không có triệu chứng rõ ràng.",
         "correct": true
       },
       {
-        "text": "Cắt giảm chi phí hoạt động đáng kể.",
+        "text": "Có, có thể nhận biết qua triệu chứng sốt nhẹ.",
         "correct": false
       },
       {
-        "text": "Không có sự thay đổi nào trong chiến lược.",
+        "text": "Có, có thể thấy mụn nước xuất hiện.",
         "correct": false
       },
       {
-        "text": "Giảm tỉ lệ CASA xuống dưới 30%.",
+        "text": "Có, có thể nhận biết qua đau đầu và mệt mỏi.",
+        "correct": false
+      },
+      {
+        "text": "Có, có thể thấy triệu chứng chảy nước mũi.",
         "correct": false
       }
     ]
@@ -1968,33 +1999,6 @@
     ]
   },
   {
-    "title": "Mắc sốt xuất huyết nổi ban có nên tắm?",
-    "content": "Người bệnh sốt xuất huyết có thể tắm bằng nước ấm, nhưng cần lưu ý không kỳ cọ mạnh và tránh nước lạnh để ngăn ngừa tình trạng xuất huyết dưới da. Việc tắm giúp cơ thể thông thoáng và sạch sẽ, nhưng nên thực hiện nhẹ nhàng trong môi trường kín gió. Bên cạnh đó, người bệnh cần duy trì chế độ dinh dưỡng tốt và theo dõi các triệu chứng để tránh biến chứng nghiêm trọng.",
-    "link": "https://vnexpress.net/mac-sot-xuat-huyet-noi-ban-co-nen-tam-4861344.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Người mắc sốt xuất huyết có nên tắm không?",
-    "answers": [
-      {
-        "text": "Có, nhưng cần tắm nhẹ nhàng bằng nước ấm.",
-        "correct": true
-      },
-      {
-        "text": "Không, hoàn toàn không nên tắm.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên tắm trong trường hợp có sốt nhẹ.",
-        "correct": false
-      },
-      {
-        "text": "Có thể tắm nhưng không được gãi mạnh.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dấu hiệu khi đi bộ cảnh báo bệnh tiểu đường",
     "content": "Bài viết nêu rõ những dấu hiệu khi đi bộ có thể cảnh báo bệnh tiểu đường, bao gồm cảm giác tê, ngứa ran, chuột rút ở chân, mệt mỏi bất thường và sưng ở bàn chân. Những triệu chứng này có thể do bệnh thần kinh ngoại biên hoặc bệnh động mạch ngoại biên do tiểu đường gây ra. Việc phát hiện sớm những dấu hiệu này rất quan trọng để kiểm soát bệnh tiểu đường hiệu quả.",
     "link": "https://vnexpress.net/dau-hieu-khi-di-bo-canh-bao-benh-tieu-duong-4861192.html",
@@ -2021,6 +2025,33 @@
       },
       {
         "text": "Nôn mửa và tiêu chảy",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mắc sốt xuất huyết nổi ban có nên tắm?",
+    "content": "Người bệnh sốt xuất huyết có thể tắm bằng nước ấm, nhưng cần lưu ý không kỳ cọ mạnh và tránh nước lạnh để ngăn ngừa tình trạng xuất huyết dưới da. Việc tắm giúp cơ thể thông thoáng và sạch sẽ, nhưng nên thực hiện nhẹ nhàng trong môi trường kín gió. Bên cạnh đó, người bệnh cần duy trì chế độ dinh dưỡng tốt và theo dõi các triệu chứng để tránh biến chứng nghiêm trọng.",
+    "link": "https://vnexpress.net/mac-sot-xuat-huyet-noi-ban-co-nen-tam-4861344.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Người mắc sốt xuất huyết có nên tắm không?",
+    "answers": [
+      {
+        "text": "Có, nhưng cần tắm nhẹ nhàng bằng nước ấm.",
+        "correct": true
+      },
+      {
+        "text": "Không, hoàn toàn không nên tắm.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên tắm trong trường hợp có sốt nhẹ.",
+        "correct": false
+      },
+      {
+        "text": "Có thể tắm nhưng không được gãi mạnh.",
         "correct": false
       }
     ]
@@ -3977,28 +4008,32 @@
     ]
   },
   {
-    "title": "Những điều \"ngược đời\" trong việc nuôi dạy con từ góc nhìn chuyên gia",
-    "content": "Bài viết đề cập đến những điều \"ngược đời\" trong việc nuôi dạy con mà phụ huynh cần chấp nhận để có một hành trình nuôi dưỡng suôn sẻ hơn. Chuyên gia tâm lý Naomi Fisher khuyên rằng cha mẹ nên chấp nhận thực tế khác với kỳ vọng, nhượng bộ trong những chuyện nhỏ, và tìm hiểu về thế giới trực tuyến của con. Hơn nữa, sự hài hước cũng đóng vai trò quan trọng trong việc tạo ra không khí gia đình vui vẻ và hòa thuận, giúp trẻ dễ dàng tiếp nhận ý kiến của cha mẹ hơn.",
-    "link": "https://dantri.com.vn/giao-duc/nhung-dieu-nguoc-doi-trong-viec-nuoi-day-con-tu-goc-nhin-chuyen-gia-20250313151734224.htm",
-    "cat": "gia-dinh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những điều gì phụ huynh cần chấp nhận trong việc nuôi dạy con?",
+    "title": "'Quả bom' dân số già của Malaysia",
+    "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
+    "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Malaysia đang phải đối mặt với vấn đề gì liên quan đến dân số?",
     "answers": [
       {
-        "text": "Chấp nhận thực tế khác với kỳ vọng",
+        "text": "Già hóa dân số",
         "correct": true
       },
       {
-        "text": "Không cho trẻ sử dụng thiết bị điện tử",
+        "text": "Tỷ lệ sinh tăng",
         "correct": false
       },
       {
-        "text": "Luôn cứng rắn và không nhượng bộ con",
+        "text": "Thiếu lao động trẻ",
         "correct": false
       },
       {
-        "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
+        "text": "Gia tăng tỷ lệ thất nghiệp",
+        "correct": false
+      },
+      {
+        "text": "Chăm sóc trẻ em",
         "correct": false
       }
     ]
@@ -4058,32 +4093,28 @@
     ]
   },
   {
-    "title": "'Quả bom' dân số già của Malaysia",
-    "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
-    "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 9,
-    "question": "Malaysia đang phải đối mặt với vấn đề gì liên quan đến dân số?",
+    "title": "Những điều \"ngược đời\" trong việc nuôi dạy con từ góc nhìn chuyên gia",
+    "content": "Bài viết đề cập đến những điều \"ngược đời\" trong việc nuôi dạy con mà phụ huynh cần chấp nhận để có một hành trình nuôi dưỡng suôn sẻ hơn. Chuyên gia tâm lý Naomi Fisher khuyên rằng cha mẹ nên chấp nhận thực tế khác với kỳ vọng, nhượng bộ trong những chuyện nhỏ, và tìm hiểu về thế giới trực tuyến của con. Hơn nữa, sự hài hước cũng đóng vai trò quan trọng trong việc tạo ra không khí gia đình vui vẻ và hòa thuận, giúp trẻ dễ dàng tiếp nhận ý kiến của cha mẹ hơn.",
+    "link": "https://dantri.com.vn/giao-duc/nhung-dieu-nguoc-doi-trong-viec-nuoi-day-con-tu-goc-nhin-chuyen-gia-20250313151734224.htm",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những điều gì phụ huynh cần chấp nhận trong việc nuôi dạy con?",
     "answers": [
       {
-        "text": "Già hóa dân số",
+        "text": "Chấp nhận thực tế khác với kỳ vọng",
         "correct": true
       },
       {
-        "text": "Tỷ lệ sinh tăng",
+        "text": "Không cho trẻ sử dụng thiết bị điện tử",
         "correct": false
       },
       {
-        "text": "Thiếu lao động trẻ",
+        "text": "Luôn cứng rắn và không nhượng bộ con",
         "correct": false
       },
       {
-        "text": "Gia tăng tỷ lệ thất nghiệp",
-        "correct": false
-      },
-      {
-        "text": "Chăm sóc trẻ em",
+        "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
         "correct": false
       }
     ]
