--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Tưởng đang 'thay trời hành đạo', nhóm 'bà chủ' truy hỏi, cưỡng đoạt tiền nhân viên",
+    "content": "Một nhóm phụ nữ tại Đà Nẵng đã bị xét xử về tội cưỡng đoạt tài sản sau khi họ đe dọa hai nhân viên của cửa hàng sữa mà họ làm chủ. Nhóm này đã nghi ngờ về việc thất thoát hàng hóa và ép buộc nhân viên phải bồi thường hơn 587 triệu đồng bằng cách đe dọa sẽ tố cáo với công an. Họ đã bị tuyên phạt từ 4 đến 5 năm tù giam do hành vi của mình, trong khi hai nhân viên cũng thừa nhận phần lỗi của mình trong vụ việc.",
+    "link": "https://tuoitre.vn/tuong-dang-thay-troi-hanh-dao-nhom-ba-chu-truy-hoi-cuong-doat-tien-nhan-vien-20250314233159803.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Nhóm 'bà chủ' bị xử lý vì hành vi gì?",
+    "answers": [
+      {
+        "text": "Cưỡng đoạt tài sản",
+        "correct": true
+      },
+      {
+        "text": "Đưa hối lộ",
+        "correct": false
+      },
+      {
+        "text": "Lạm dụng tín nhiệm",
+        "correct": false
+      },
+      {
+        "text": "Trốn thuế",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Fernandes suýt rời Man Utd hè 2024",
     "content": "Bruno Fernandes đã suýt rời Manchester United trong kỳ chuyển nhượng hè 2024 do nhận được đề nghị hấp dẫn từ một CLB khác. Tuy nhiên, nhờ sự thuyết phục của ban lãnh đạo và cựu HLV Erik Ten Hag, anh đã quyết định ở lại. Fernandes hiện đang có phong độ tốt, ghi được nhiều bàn thắng và góp phần quan trọng vào đội bóng. Mặc dù có thông tin về sự quan tâm từ các đội bóng lớn như Real Madrid và PSG, anh đã gia hạn hợp đồng với Man Utd đến năm 2027.",
     "link": "https://vnexpress.net/fernandes-suyt-roi-man-utd-he-2024-4861423.html",
@@ -143,6 +170,33 @@
     ]
   },
   {
+    "title": "Sa bẫy mua 'thần dược' trên mạng",
+    "content": "Chị Lan đã mua loại \"thần dược\" được quảng cáo trên TikTok nhằm giúp con gái tăng cân, nhưng sau một tháng sử dụng, bé không những không tăng cân mà còn bị rối loạn nội tiết. Nhiều người khác cũng rơi vào bẫy tương tự khi sử dụng thuốc giảm cân và mỹ phẩm không rõ nguồn gốc, dẫn đến những tác hại nghiêm trọng cho sức khỏe. Bộ Y tế đã cảnh báo về tình trạng quảng cáo sai lệch và yêu cầu người dân thận trọng khi mua sản phẩm qua mạng, đồng thời đề xuất các biện pháp quản lý chặt chẽ hơn đối với việc kinh doanh thuốc trực tuyến.",
+    "link": "https://vnexpress.net/sa-bay-mua-than-duoc-tren-mang-4855106.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Tại sao nhiều người tiêu dùng lại bị lừa khi mua thuốc trên mạng?",
+    "answers": [
+      {
+        "text": "Vì quảng cáo thổi phồng công dụng của sản phẩm.",
+        "correct": true
+      },
+      {
+        "text": "Do giá sản phẩm quá cao.",
+        "correct": false
+      },
+      {
+        "text": "Vì sản phẩm có nguồn gốc xuất xứ rõ ràng.",
+        "correct": false
+      },
+      {
+        "text": "Do người tiêu dùng không quan tâm đến thông tin sản phẩm.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Phối cảnh công viên điện ảnh Thủ Thiêm ven sông Sài Gòn",
     "content": "Công viên điện ảnh Thủ Thiêm ven sông Sài Gòn sẽ bao gồm 7 khu chức năng chính, nhằm tạo nên một điểm nhấn văn hóa cho TP HCM. Các khu chức năng bao gồm phim trường, bảo tàng điện ảnh, khu thương mại và dịch vụ, cùng với sân khấu sự kiện và rạp chiếu phim ven sông. Dự án được chia thành ba giai đoạn phát triển, với mục tiêu không chỉ nâng cao trải nghiệm văn hóa cho du khách mà còn cải thiện cảnh quan khu vực ven sông.",
     "link": "https://vnexpress.net/phoi-canh-cong-vien-dien-anh-thu-thiem-ven-song-sai-gon-4861047.html",
@@ -169,33 +223,6 @@
       },
       {
         "text": "3",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sa bẫy mua 'thần dược' trên mạng",
-    "content": "Chị Lan đã mua loại \"thần dược\" được quảng cáo trên TikTok nhằm giúp con gái tăng cân, nhưng sau một tháng sử dụng, bé không những không tăng cân mà còn bị rối loạn nội tiết. Nhiều người khác cũng rơi vào bẫy tương tự khi sử dụng thuốc giảm cân và mỹ phẩm không rõ nguồn gốc, dẫn đến những tác hại nghiêm trọng cho sức khỏe. Bộ Y tế đã cảnh báo về tình trạng quảng cáo sai lệch và yêu cầu người dân thận trọng khi mua sản phẩm qua mạng, đồng thời đề xuất các biện pháp quản lý chặt chẽ hơn đối với việc kinh doanh thuốc trực tuyến.",
-    "link": "https://vnexpress.net/sa-bay-mua-than-duoc-tren-mang-4855106.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 9,
-    "question": "Tại sao nhiều người tiêu dùng lại bị lừa khi mua thuốc trên mạng?",
-    "answers": [
-      {
-        "text": "Vì quảng cáo thổi phồng công dụng của sản phẩm.",
-        "correct": true
-      },
-      {
-        "text": "Do giá sản phẩm quá cao.",
-        "correct": false
-      },
-      {
-        "text": "Vì sản phẩm có nguồn gốc xuất xứ rõ ràng.",
-        "correct": false
-      },
-      {
-        "text": "Do người tiêu dùng không quan tâm đến thông tin sản phẩm.",
         "correct": false
       }
     ]
@@ -873,33 +900,6 @@
     ]
   },
   {
-    "title": "Bí quyết giúp con giỏi tiếng Anh",
-    "content": "Bài viết nhấn mạnh tầm quan trọng của việc học tiếng Anh trong thời đại ngày nay, khi mà việc thành thạo ngôn ngữ này đã trở thành điều thiết yếu cho trẻ em Việt Nam. Phụ huynh cần tạo ra môi trường học tập 100% tiếng Anh và khuyến khích trẻ giao tiếp hàng ngày để phát triển phản xạ ngôn ngữ tự nhiên. Đồng thời, phương pháp học tập chủ động như Discovery Learning cũng được khuyến khích để giúp trẻ phát triển kỹ năng sống và khả năng giao tiếp tự tin trong tương lai.",
-    "link": "https://dantri.com.vn/giao-duc/bi-quyet-giup-con-gioi-tieng-anh-20250314162050005.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Làm thế nào để giúp trẻ em giỏi tiếng Anh?",
-    "answers": [
-      {
-        "text": "Tạo môi trường học tập 100% tiếng Anh",
-        "correct": true
-      },
-      {
-        "text": "Chỉ dạy lý thuyết mà không thực hành",
-        "correct": false
-      },
-      {
-        "text": "Không khuyến khích trẻ giao tiếp",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cho trẻ xem phim tiếng Việt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
     "content": "Trong giai đoạn ủ bệnh của thủy đậu, từ 10-21 ngày sau khi nhiễm virus, người bệnh không có triệu chứng rõ ràng nào để nhận biết. Thời gian lây nhiễm bắt đầu từ 1-2 ngày trước khi phát ban xuất hiện. Để phòng bệnh, tiêm vaccine là biện pháp hiệu quả nhất, và có ba loại vaccine thủy đậu hiện có tại Việt Nam. Người bệnh cần chăm sóc đúng cách và theo dõi các dấu hiệu để tránh biến chứng.",
     "link": "https://vnexpress.net/co-the-nhan-biet-thuy-dau-trong-giai-doan-u-benh-khong-4861443.html",
@@ -926,6 +926,33 @@
       },
       {
         "text": "Có, có thể thấy triệu chứng chảy nước mũi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bí quyết giúp con giỏi tiếng Anh",
+    "content": "Bài viết nhấn mạnh tầm quan trọng của việc học tiếng Anh trong thời đại ngày nay, khi mà việc thành thạo ngôn ngữ này đã trở thành điều thiết yếu cho trẻ em Việt Nam. Phụ huynh cần tạo ra môi trường học tập 100% tiếng Anh và khuyến khích trẻ giao tiếp hàng ngày để phát triển phản xạ ngôn ngữ tự nhiên. Đồng thời, phương pháp học tập chủ động như Discovery Learning cũng được khuyến khích để giúp trẻ phát triển kỹ năng sống và khả năng giao tiếp tự tin trong tương lai.",
+    "link": "https://dantri.com.vn/giao-duc/bi-quyet-giup-con-gioi-tieng-anh-20250314162050005.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Làm thế nào để giúp trẻ em giỏi tiếng Anh?",
+    "answers": [
+      {
+        "text": "Tạo môi trường học tập 100% tiếng Anh",
+        "correct": true
+      },
+      {
+        "text": "Chỉ dạy lý thuyết mà không thực hành",
+        "correct": false
+      },
+      {
+        "text": "Không khuyến khích trẻ giao tiếp",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cho trẻ xem phim tiếng Việt",
         "correct": false
       }
     ]
@@ -1677,33 +1704,6 @@
     ]
   },
   {
-    "title": "Béo phì nhưng suy dinh dưỡng do ăn kiêng sai cách",
-    "content": "Chị Liên, 41 tuổi, nặng 67 kg, đã giảm béo bằng cách ăn kiêng khắc nghiệt nhưng vẫn bị béo phì và suy dinh dưỡng. Sau khi giảm cân bằng cách cắt giảm tinh bột và đồ ngọt, chị gặp phải tình trạng thiếu vitamin D và suy dinh dưỡng do không nạp đủ chất dinh dưỡng cần thiết. Bác sĩ khuyến cáo rằng chế độ ăn kiêng như vậy không hiệu quả và cần có kế hoạch ăn uống hợp lý hơn để giảm cân an toàn.",
-    "link": "https://vnexpress.net/beo-phi-nhung-suy-dinh-duong-do-an-kieng-sai-cach-4861383.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao chị Liên lại bị béo phì nhưng vẫn suy dinh dưỡng?",
-    "answers": [
-      {
-        "text": "Vì chế độ ăn kiêng quá khắc nghiệt dẫn đến thiếu dinh dưỡng.",
-        "correct": true
-      },
-      {
-        "text": "Chị Liên không tập thể dục.",
-        "correct": false
-      },
-      {
-        "text": "Chế độ ăn của chị Liên hoàn toàn bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Chị Liên ăn quá nhiều thực phẩm chức năng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "6 vitamin, khoáng chất cần thiết cho não",
     "content": "Bài viết nêu rõ 6 loại vitamin và khoáng chất thiết yếu cho não, bao gồm vitamin D, B, magie, omega-3 và kẽm, giúp cải thiện chức năng não, tăng cường trí nhớ và hỗ trợ sức khỏe tâm thần. Vitamin D hỗ trợ tâm trạng và bảo vệ não, magie giúp truyền thông điệp đến não, omega-3 có tác dụng chống viêm và hỗ trợ kiểm soát triệu chứng trầm cảm. Vitamin B và kẽm cũng đóng vai trò quan trọng trong việc duy trì sự cân bằng hormone và chức năng não.",
     "link": "https://vnexpress.net/6-vitamin-khoang-chat-can-thiet-cho-nao-4861219.html",
@@ -1726,6 +1726,33 @@
       },
       {
         "text": "Vitamin B, A, kẽm, magie",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Béo phì nhưng suy dinh dưỡng do ăn kiêng sai cách",
+    "content": "Chị Liên, 41 tuổi, nặng 67 kg, đã giảm béo bằng cách ăn kiêng khắc nghiệt nhưng vẫn bị béo phì và suy dinh dưỡng. Sau khi giảm cân bằng cách cắt giảm tinh bột và đồ ngọt, chị gặp phải tình trạng thiếu vitamin D và suy dinh dưỡng do không nạp đủ chất dinh dưỡng cần thiết. Bác sĩ khuyến cáo rằng chế độ ăn kiêng như vậy không hiệu quả và cần có kế hoạch ăn uống hợp lý hơn để giảm cân an toàn.",
+    "link": "https://vnexpress.net/beo-phi-nhung-suy-dinh-duong-do-an-kieng-sai-cach-4861383.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao chị Liên lại bị béo phì nhưng vẫn suy dinh dưỡng?",
+    "answers": [
+      {
+        "text": "Vì chế độ ăn kiêng quá khắc nghiệt dẫn đến thiếu dinh dưỡng.",
+        "correct": true
+      },
+      {
+        "text": "Chị Liên không tập thể dục.",
+        "correct": false
+      },
+      {
+        "text": "Chế độ ăn của chị Liên hoàn toàn bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Chị Liên ăn quá nhiều thực phẩm chức năng.",
         "correct": false
       }
     ]
