--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Ronaldo bỏ vào đường hầm khi bị thay sớm",
+    "content": "Trong trận đấu giữa Al Nassr và Al Kholood tại Saudi Pro League, Cristiano Ronaldo đã thể hiện sự tức giận khi bị thay ra ở đầu hiệp hai dù Al Nassr đang dẫn 3-0. HLV Stefano Pioli đã quyết định thay Ronaldo bằng Ayman Yahya để củng cố hàng thủ sau khi đội bóng gặp bất lợi về quân số. Sau khi rời sân, Ronaldo đã bỏ vào đường hầm và chia sẻ khoảnh khắc với đồng đội trước đó. Đây là lần thứ năm mùa này anh không thi đấu trọn 90 phút.",
+    "link": "https://vnexpress.net/ronaldo-bo-vao-duong-ham-khi-bi-thay-som-4861541.html",
+    "cat": "the-thao",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao Ronaldo lại bỏ vào đường hầm trong trận đấu mới đây?",
+    "answers": [
+      {
+        "text": "Vì bị thay ra sớm trong trận đấu",
+        "correct": true
+      },
+      {
+        "text": "Vì chấn thương trong trận",
+        "correct": false
+      },
+      {
+        "text": "Vì không hài lòng với trọng tài",
+        "correct": false
+      },
+      {
+        "text": "Vì không muốn thi đấu thêm nữa",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tưởng đang 'thay trời hành đạo', nhóm 'bà chủ' truy hỏi, cưỡng đoạt tiền nhân viên",
     "content": "Một nhóm phụ nữ tại Đà Nẵng đã bị xét xử về tội cưỡng đoạt tài sản sau khi họ đe dọa hai nhân viên của cửa hàng sữa mà họ làm chủ. Nhóm này đã nghi ngờ về việc thất thoát hàng hóa và ép buộc nhân viên phải bồi thường hơn 587 triệu đồng bằng cách đe dọa sẽ tố cáo với công an. Họ đã bị tuyên phạt từ 4 đến 5 năm tù giam do hành vi của mình, trong khi hai nhân viên cũng thừa nhận phần lỗi của mình trong vụ việc.",
     "link": "https://tuoitre.vn/tuong-dang-thay-troi-hanh-dao-nhom-ba-chu-truy-hoi-cuong-doat-tien-nhan-vien-20250314233159803.htm",
@@ -237,33 +264,6 @@
     ]
   },
   {
-    "title": "Sa bẫy mua 'thần dược' trên mạng",
-    "content": "Chị Lan đã mua loại \"thần dược\" được quảng cáo trên TikTok nhằm giúp con gái tăng cân, nhưng sau một tháng sử dụng, bé không những không tăng cân mà còn bị rối loạn nội tiết. Nhiều người khác cũng rơi vào bẫy tương tự khi sử dụng thuốc giảm cân và mỹ phẩm không rõ nguồn gốc, dẫn đến những tác hại nghiêm trọng cho sức khỏe. Bộ Y tế đã cảnh báo về tình trạng quảng cáo sai lệch và yêu cầu người dân thận trọng khi mua sản phẩm qua mạng, đồng thời đề xuất các biện pháp quản lý chặt chẽ hơn đối với việc kinh doanh thuốc trực tuyến.",
-    "link": "https://vnexpress.net/sa-bay-mua-than-duoc-tren-mang-4855106.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 9,
-    "question": "Tại sao nhiều người tiêu dùng lại bị lừa khi mua thuốc trên mạng?",
-    "answers": [
-      {
-        "text": "Vì quảng cáo thổi phồng công dụng của sản phẩm.",
-        "correct": true
-      },
-      {
-        "text": "Do giá sản phẩm quá cao.",
-        "correct": false
-      },
-      {
-        "text": "Vì sản phẩm có nguồn gốc xuất xứ rõ ràng.",
-        "correct": false
-      },
-      {
-        "text": "Do người tiêu dùng không quan tâm đến thông tin sản phẩm.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Phối cảnh công viên điện ảnh Thủ Thiêm ven sông Sài Gòn",
     "content": "Công viên điện ảnh Thủ Thiêm ven sông Sài Gòn sẽ bao gồm 7 khu chức năng chính, nhằm tạo nên một điểm nhấn văn hóa cho TP HCM. Các khu chức năng bao gồm phim trường, bảo tàng điện ảnh, khu thương mại và dịch vụ, cùng với sân khấu sự kiện và rạp chiếu phim ven sông. Dự án được chia thành ba giai đoạn phát triển, với mục tiêu không chỉ nâng cao trải nghiệm văn hóa cho du khách mà còn cải thiện cảnh quan khu vực ven sông.",
     "link": "https://vnexpress.net/phoi-canh-cong-vien-dien-anh-thu-thiem-ven-song-sai-gon-4861047.html",
@@ -290,6 +290,33 @@
       },
       {
         "text": "3",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sa bẫy mua 'thần dược' trên mạng",
+    "content": "Chị Lan đã mua loại \"thần dược\" được quảng cáo trên TikTok nhằm giúp con gái tăng cân, nhưng sau một tháng sử dụng, bé không những không tăng cân mà còn bị rối loạn nội tiết. Nhiều người khác cũng rơi vào bẫy tương tự khi sử dụng thuốc giảm cân và mỹ phẩm không rõ nguồn gốc, dẫn đến những tác hại nghiêm trọng cho sức khỏe. Bộ Y tế đã cảnh báo về tình trạng quảng cáo sai lệch và yêu cầu người dân thận trọng khi mua sản phẩm qua mạng, đồng thời đề xuất các biện pháp quản lý chặt chẽ hơn đối với việc kinh doanh thuốc trực tuyến.",
+    "link": "https://vnexpress.net/sa-bay-mua-than-duoc-tren-mang-4855106.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Tại sao nhiều người tiêu dùng lại bị lừa khi mua thuốc trên mạng?",
+    "answers": [
+      {
+        "text": "Vì quảng cáo thổi phồng công dụng của sản phẩm.",
+        "correct": true
+      },
+      {
+        "text": "Do giá sản phẩm quá cao.",
+        "correct": false
+      },
+      {
+        "text": "Vì sản phẩm có nguồn gốc xuất xứ rõ ràng.",
+        "correct": false
+      },
+      {
+        "text": "Do người tiêu dùng không quan tâm đến thông tin sản phẩm.",
         "correct": false
       }
     ]
@@ -407,37 +434,6 @@
     ]
   },
   {
-    "title": "Gần 32% lao động TP HCM tìm việc lương trên 20 triệu đồng mỗi tháng",
-    "content": "Gần 32% lao động ở TP HCM tìm kiếm việc làm với mức lương trên 20 triệu đồng mỗi tháng, trong khi chỉ khoảng 9,77% số vị trí tuyển dụng tại các doanh nghiệp đáp ứng được yêu cầu này. Theo báo cáo của UBND TP HCM, lao động có trình độ đại học trở lên chiếm gần 68% trong khi nhu cầu tuyển dụng chủ yếu tập trung vào lao động phổ thông. Điều này cho thấy sự mất cân đối giữa mong muốn của người lao động và nhu cầu thực tế của thị trường lao động tại thành phố.",
-    "link": "https://vnexpress.net/gan-32-lao-dong-tp-hcm-tim-viec-luong-tren-20-trieu-dong-moi-thang-4861495.html",
-    "cat": "kinh-doanh",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tại TP HCM, tỷ lệ lao động tìm việc có lương trên 20 triệu đồng mỗi tháng là bao nhiêu?",
-    "answers": [
-      {
-        "text": "9,77%",
-        "correct": false
-      },
-      {
-        "text": "44,47%",
-        "correct": false
-      },
-      {
-        "text": "25,83%",
-        "correct": false
-      },
-      {
-        "text": "31,76%",
-        "correct": true
-      },
-      {
-        "text": "3,64%",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ga T3 sẽ tiếp nhận khoảng 80% khách bay nội địa ở Tân Sơn Nhất",
     "content": "Ga T3 tại sân bay Tân Sơn Nhất sẽ tiếp nhận khoảng 80% khách bay nội địa, chủ yếu từ hai hãng hàng không Vietnam Airlines và Vietjet Air, nhằm giảm tải cho ga T1 đã quá tải nhiều năm. Dự kiến, ga T3 sẽ chính thức khai thác từ ngày 30/4/2025 sau khi tổ chức các chuyến bay thử nghiệm. Với công suất phục vụ lên tới 20 triệu khách mỗi năm, T3 sẽ nâng tổng công suất của sân bay lên 50 triệu khách mỗi năm, đồng thời cải thiện tình trạng giao thông xung quanh.",
     "link": "https://vnexpress.net/ga-t3-se-tiep-nhan-khoang-80-khach-bay-noi-dia-o-tan-son-nhat-4861482.html",
@@ -464,6 +460,37 @@
       },
       {
         "text": "Ngày 10/5/2025",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Gần 32% lao động TP HCM tìm việc lương trên 20 triệu đồng mỗi tháng",
+    "content": "Gần 32% lao động ở TP HCM tìm kiếm việc làm với mức lương trên 20 triệu đồng mỗi tháng, trong khi chỉ khoảng 9,77% số vị trí tuyển dụng tại các doanh nghiệp đáp ứng được yêu cầu này. Theo báo cáo của UBND TP HCM, lao động có trình độ đại học trở lên chiếm gần 68% trong khi nhu cầu tuyển dụng chủ yếu tập trung vào lao động phổ thông. Điều này cho thấy sự mất cân đối giữa mong muốn của người lao động và nhu cầu thực tế của thị trường lao động tại thành phố.",
+    "link": "https://vnexpress.net/gan-32-lao-dong-tp-hcm-tim-viec-luong-tren-20-trieu-dong-moi-thang-4861495.html",
+    "cat": "kinh-doanh",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tại TP HCM, tỷ lệ lao động tìm việc có lương trên 20 triệu đồng mỗi tháng là bao nhiêu?",
+    "answers": [
+      {
+        "text": "9,77%",
+        "correct": false
+      },
+      {
+        "text": "44,47%",
+        "correct": false
+      },
+      {
+        "text": "25,83%",
+        "correct": false
+      },
+      {
+        "text": "31,76%",
+        "correct": true
+      },
+      {
+        "text": "3,64%",
         "correct": false
       }
     ]
@@ -2026,6 +2053,33 @@
     ]
   },
   {
+    "title": "Mắc sốt xuất huyết nổi ban có nên tắm?",
+    "content": "Người bệnh sốt xuất huyết có thể tắm bằng nước ấm, nhưng cần lưu ý không kỳ cọ mạnh và tránh nước lạnh để ngăn ngừa tình trạng xuất huyết dưới da. Việc tắm giúp cơ thể thông thoáng và sạch sẽ, nhưng nên thực hiện nhẹ nhàng trong môi trường kín gió. Bên cạnh đó, người bệnh cần duy trì chế độ dinh dưỡng tốt và theo dõi các triệu chứng để tránh biến chứng nghiêm trọng.",
+    "link": "https://vnexpress.net/mac-sot-xuat-huyet-noi-ban-co-nen-tam-4861344.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Người mắc sốt xuất huyết có nên tắm không?",
+    "answers": [
+      {
+        "text": "Có, nhưng cần tắm nhẹ nhàng bằng nước ấm.",
+        "correct": true
+      },
+      {
+        "text": "Không, hoàn toàn không nên tắm.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên tắm trong trường hợp có sốt nhẹ.",
+        "correct": false
+      },
+      {
+        "text": "Có thể tắm nhưng không được gãi mạnh.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Dấu hiệu khi đi bộ cảnh báo bệnh tiểu đường",
     "content": "Bài viết nêu rõ những dấu hiệu khi đi bộ có thể cảnh báo bệnh tiểu đường, bao gồm cảm giác tê, ngứa ran, chuột rút ở chân, mệt mỏi bất thường và sưng ở bàn chân. Những triệu chứng này có thể do bệnh thần kinh ngoại biên hoặc bệnh động mạch ngoại biên do tiểu đường gây ra. Việc phát hiện sớm những dấu hiệu này rất quan trọng để kiểm soát bệnh tiểu đường hiệu quả.",
     "link": "https://vnexpress.net/dau-hieu-khi-di-bo-canh-bao-benh-tieu-duong-4861192.html",
@@ -2052,33 +2106,6 @@
       },
       {
         "text": "Nôn mửa và tiêu chảy",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mắc sốt xuất huyết nổi ban có nên tắm?",
-    "content": "Người bệnh sốt xuất huyết có thể tắm bằng nước ấm, nhưng cần lưu ý không kỳ cọ mạnh và tránh nước lạnh để ngăn ngừa tình trạng xuất huyết dưới da. Việc tắm giúp cơ thể thông thoáng và sạch sẽ, nhưng nên thực hiện nhẹ nhàng trong môi trường kín gió. Bên cạnh đó, người bệnh cần duy trì chế độ dinh dưỡng tốt và theo dõi các triệu chứng để tránh biến chứng nghiêm trọng.",
-    "link": "https://vnexpress.net/mac-sot-xuat-huyet-noi-ban-co-nen-tam-4861344.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Người mắc sốt xuất huyết có nên tắm không?",
-    "answers": [
-      {
-        "text": "Có, nhưng cần tắm nhẹ nhàng bằng nước ấm.",
-        "correct": true
-      },
-      {
-        "text": "Không, hoàn toàn không nên tắm.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên tắm trong trường hợp có sốt nhẹ.",
-        "correct": false
-      },
-      {
-        "text": "Có thể tắm nhưng không được gãi mạnh.",
         "correct": false
       }
     ]
