Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Siêu ưu đãi sản phẩm dinh dưỡng mùa hè",
+    "content": "Hệ thống bán lẻ Saigon Co.op đang triển khai chương trình \"Lễ hội dinh dưỡng\" với mức giảm giá lên đến 50% cho gần 1.000 sản phẩm dinh dưỡng như sữa, thịt và trái cây, nhằm đáp ứng nhu cầu tiêu dùng trong mùa hè. Chương trình diễn ra tại hơn 800 điểm bán toàn quốc từ nay đến 26-3-2025, giúp người tiêu dùng tiết kiệm chi phí và đảm bảo sức khỏe trong thời tiết nắng nóng. Các sản phẩm từ thương hiệu uy tín cũng được lựa chọn để phục vụ đa dạng nhu cầu khách hàng.",
+    "link": "https://tuoitre.vn/sieu-uu-dai-san-pham-dinh-duong-mua-he-20250315074355976.htm",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chương trình \"Lễ hội dinh dưỡng\" của Saigon Co.op có mức giảm giá bao nhiêu?",
+    "answers": [
+      {
+        "text": "50%",
+        "correct": true
+      },
+      {
+        "text": "30%",
+        "correct": false
+      },
+      {
+        "text": "20%",
+        "correct": false
+      },
+      {
+        "text": "15%",
+        "correct": false
+      },
+      {
+        "text": "10%",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hoàng Thùy Linh thừa nhận đang hạnh phúc, nói về doanh thu làm phim",
     "content": "Hoàng Thùy Linh vừa ra mắt phim tài liệu điện ảnh mang tên \"Vietnamese Concert Film: Chúng ta là người Việt Nam\" sau hai năm sản xuất. Nữ ca sĩ bày tỏ sự hạnh phúc trong cuộc sống cá nhân và sự nghiệp, đồng thời nhấn mạnh rằng doanh thu không phải là điều cô quan tâm nhất đối với bộ phim. Cô mong rằng khán giả sẽ tìm thấy cảm hứng từ tác phẩm này. Hoàng Thùy Linh cũng chia sẻ rằng bản thân cần hoàn thiện hơn để trở thành một người vợ, người mẹ tốt trong tương lai.",
     "link": "https://dantri.com.vn/giai-tri/hoang-thuy-linh-thua-nhan-dang-hanh-phuc-noi-ve-doanh-thu-lam-phim-20250315013047795.htm",
